# itomp

./: ITOMP_INSTALL.txt  LICENSE  README.md
external_libs/: .gitignore  levmar-2.6.tgz
external_libs/CLAPACK-3.2.1/: .gitignore
external_libs/levmar-2.6/: .gitignore
external_libs/rbdl-2.4.0/: .hg_archival.txt  CMakeLists.txt  CMakeLists.txt~
external_libs/rbdl-rbdl-791c1db8ed61/: .hg_archival.txt  CMakeLists.txt
human_description/: .cproject  .project  .project~  .pydevproject  cmake_install.cmake  mainpage.dox  manifest.xml
human_description/meshes/: chisel.dae  head.dae  leftFoot.dae  leftHand.dae  lowerLeftArm.dae  lowerLeftLeg.dae  lowerRightArm.dae  lowerRightLeg.dae  pelvis.dae  rightFoot.dae  (+6 more)
human_moveit_generated/: .project  .setup_assistant  CMakeLists.txt  package.xml
itomp_cio_planner/: .cproject  .gitignore  .project  .project~  .pydevproject  CMakeLists.txt  CMakeLists_use_ext_lib.txt  itomp_plugin_description.xml  mainpage.dox  manifest.xml
itomp_cio_planner/config/: .gitignore  params.yaml  params_climb.yaml  params_dodge.yaml  params_hm.yaml  params_kuka.yaml  params_walking.yaml  params_zombie.yaml  upload_param.sh  upload_param_climb.sh  upload_param_dodge.sh  upload_param_hm.sh  upload_param_kuka.sh  upload_param_walking.sh  upload_param_zombie.sh
itomp_cio_planner/config/rom/: left_ankle_itomp.rom  left_arm_itomp.rom  right_ankle_itomp.rom  rightarm_itomp.rom
itomp_cio_planner/dlib/dlib/: README.txt  revision.h
itomp_cio_planner/dlib/dlib/optimization/: optimization.h  optimization_search_strategies.h
itomp_cio_planner/include/itomp_cio_planner/: common.h  itomp_planning_interface.h
itomp_cio_planner/include/itomp_cio_planner/collision/: collision_common_derivatives.h  collision_robot_fcl_derivatives.h  collision_world_fcl_derivatives.h
itomp_cio_planner/include/itomp_cio_planner/contact/: contact_force_solver.h  contact_point.h  contact_util.h  contact_variables.h  ground_manager.h  levmar.h
itomp_cio_planner/include/itomp_cio_planner/cost/: smoothness_cost.h  trajectory_cost.h  trajectory_cost_accumulator.h  trajectory_cost_helper.h  trajectory_cost_manager.h
itomp_cio_planner/include/itomp_cio_planner/model/: itomp_planning_group.h  itomp_robot_joint.h  itomp_robot_model.h  itomp_robot_model_ik.h  rbdl_model_util.h  rbdl_urdf_reader.h  treefksolverjointposaxis.hpp  treefksolverjointposaxis_partial.hpp
itomp_cio_planner/include/itomp_cio_planner/optimization/: best_cost_manager.h  dlib_optimization_util.h  evaluation_data.h  evaluation_manager.h  improvement_manager.h  improvement_manager_chomp.h  improvement_manager_nlp.h  itomp_optimizer.h  new_eval_manager.h  phase_manager.h  rollout.h
itomp_cio_planner/include/itomp_cio_planner/planner/: itomp_planner_node.h  planning_info.h  planning_info_manager.h
itomp_cio_planner/include/itomp_cio_planner/rom/: ROM.h
itomp_cio_planner/include/itomp_cio_planner/trajectory/: composite_trajectory.h  element_trajectory.h  full_trajectory.h  itomp_cio_trajectory.h  itomp_trajectory.h  new_trajectory.h  parameter_trajectory.h  trajectory.h  trajectory_factory.h
itomp_cio_planner/include/itomp_cio_planner/util/: assert.h  differentiation_rules.h  exponential_map.h  itomp_debug.h  jacobian.h  joint_state_util.h  min_jerk_trajectory.h  multivariate_gaussian.h  performance_profiler.h  planning_parameters.h  point_to_triangle_projection.h  singleton.h  vector_util.h
itomp_cio_planner/include/itomp_cio_planner/visualization/: new_viz_manager.h  visualization_manager.h
itomp_cio_planner/include/rbdl/: Joint.h  rbdl_config.h
itomp_cio_planner/lib/: librbdl.so.2.3.2
itomp_cio_planner/src/: itomp_planning_interface.cpp  itomp_plugin.cpp  main.cpp
itomp_cio_planner/src/collision/: collision_robot_fcl_derivatives.cpp  collision_world_fcl_derivatives.cpp
itomp_cio_planner/src/contact/: contact_force_solver.cpp  contact_point.cpp  contact_util.cpp  contact_variables.cpp  ground_manager.cpp
itomp_cio_planner/src/cost/: smoothness_cost.cpp  trajectory_cost.cpp  trajectory_cost_accumulator.cpp  trajectory_cost_manager.cpp
itomp_cio_planner/src/model/: itomp_planning_group.cpp  itomp_robot_model.cpp  itomp_robot_model_ik.cpp  rbdl_model_util.cpp  rbdl_urdf_reader.cpp  treefksolverjointposaxis.cpp  treefksolverjointposaxis_partial.cpp
itomp_cio_planner/src/optimization/: evaluation_data.cpp  evaluation_manager.cpp  improvement_manager.cpp  improvement_manager_chomp.cpp  improvement_manager_nlp.cpp  itomp_optimizer.cpp  new_eval_manager.cpp  phase_manager.cpp  rollout.cpp
itomp_cio_planner/src/planner/: itomp_planner_node.cpp  planning_info_manager.cpp
itomp_cio_planner/src/rom/: ROM.cpp
itomp_cio_planner/src/trajectory/: composite_trajectory.cpp  element_trajectory.cpp  full_trajectory.cpp  itomp_cio_trajectory.cpp  itomp_trajectory.cpp  new_trajectory.cpp  parameter_trajectory.cpp  trajectory.cpp  trajectory_factory.cpp
itomp_cio_planner/src/util/: exponential_map.cpp  jacobian.cpp  joint_state_util.cpp  min_jerk_trajectory.cpp  planning_parameters.cpp  point_to_triangle_projection.cpp
itomp_cio_planner/src/visualization/: new_viz_manager.cpp  visualization_manager.cpp
kuka_description/: .cproject  .gitignore  .project  cmake_install.cmake  lbr5_7.urdf  lbr5_7_no_tool.urdf  lbr5_7_org.urdf  mainpage.dox  manifest.xml
kuka_moveit_generated/: .project  .setup_assistant  CMakeLists.txt  package.xml
lbr3_model/: .gitignore  CMakeLists.txt  empty.blend  lbr3_org.urdf  lbr3_tool.urdf  lbr_gripper_pinch.urdf  package.xml
lbr3_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
lbr3_org_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
move_itomp/: .cproject  .gitignore  .project  .project~  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
move_itomp_kuka/: .cproject  .gitignore  .project  CMakeLists.txt  cmake_install.cmake  edge.txt  mainpage.dox  manifest.xml  vertex.txt
move_itomp_replanning/: .gitignore  cmake_install.cmake  mainpage.dox  manifest.xml
rocketbox_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+405 files in other folders)
